
option java_outer_classname="GetCacheBindingResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message GetCacheBindingResponse {
	optional string server = 1;
	optional int32 port = 2;
	optional bool isRunning = 3; 
}